apply plugin: 'java'
apply plugin: 'distribution'
apply plugin: 'idea'

defaultTasks('distZip')

sourceCompatibility = '1.8'

sourceSets {
	scripts {
		java {
			srcDir('dist/game/data/scripts')
		}
	}
}

dependencies {
	compile(fileTree(dir: 'dist/libs', include: '*.jar'))
	compile project(':l2junity-commons')
	compile project(':l2junity-geodriver')
	compile project(':l2junity-network')
	compile project(':l2junity-mmocore')
	
	compile(group: 'org.slf4j', name: 'slf4j-api', version: '1.7.10')
	compile(group: 'com.mchange', name: 'c3p0', version: '0.9.5')
	compile(group: 'com.sun.mail', name: 'javax.mail', version: '1.5.2')
	compile(group: 'org.bitlet', name: 'weupnp', version: '0.1.2')
	
	runtime(group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.2')
	runtime(group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.2')
	runtime(group: 'org.eclipse.jdt.core.compiler', name: 'ecj', version: '4.4.2')
	runtime(group: 'mysql', name: 'mysql-connector-java', version: '5.1.34')
}

def generalManifest = manifest {
	attributes('Built-By': System.getProperty('user.name'),
			'Implementation-URL': 'http://www.l2junity.org/',
			'Class-Path': configurations.runtime.collect({ '../libs/' + it.getName() }).join(' '))
}

jar {
	archiveName = 'l2jserver.jar'
	exclude('**/dbinstaller/**')
	exclude('**/loginserver/**')
	exclude('**/accountmanager/**')
	exclude('**/gsregistering/**')
	manifest {
		from(generalManifest)
		attributes('Main-Class': 'org.l2junity.gameserver.GameServer')
	}
}

task loginJar(type: Jar, dependsOn: classes) {
	from(sourceSets.main.output)
	archiveName = 'l2jlogin.jar'
	exclude('**/dbinstaller/**')
	exclude('**/gameserver/**')
	manifest {
		from(generalManifest)
		attributes('Main-Class': 'org.l2junity.loginserver.L2LoginServer')
	}
}

task dbInstLsJar(type: Jar, dependsOn: classes) {
	from(sourceSets.main.output)
	archiveName = 'dbinst_ls.jar'
	include '**/dbinstaller/**'
	include '**/images/**'
	include '**/util/**'
	include '**/SQLFilter**'
	exclude '**/LauncherGS*'
	manifest {
		from(generalManifest)
		attributes('Main-Class': 'org.l2junity.tools.dbinstaller.LauncherLS')
	}
}

task dbInstGsJar(type: Jar, dependsOn: classes) {
	from(sourceSets.main.output)
	archiveName = 'dbinst_gs.jar'
	include('**/dbinstaller/**')
	include('**/images/**')
	include('**/util/**')
	include('**/SQLFilter**')
	exclude('**/LauncherLS*')
	manifest {
		from(generalManifest)
		attributes 'Main-Class': 'org.l2junity.tools.dbinstaller.LauncherGS'
	}
}

artifacts {
	archives loginJar, dbInstLsJar, dbInstGsJar
}

distributions {
	main {
		contents {
			from('dist') {
				exclude('libs')
			}
			into('libs') {
				from(configurations.runtime)
			}
			into('game') {
				from(jar)
			}
			into('login') {
				from(loginJar)
			}
			into('tools') {
				from(dbInstLsJar)
				from(dbInstGsJar)
			}
		}
	}
}

task wrapper(type: Wrapper) {
	gradleVersion = '2.2.1'
}
